fixed header issue on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,7 +18,7 @@
     color: white;
     padding: 2vh;
     padding-top: 3vh;
-    padding-bottom: 0;
+    padding-bottom: 3vh;
     font-size: 3.9vw;
 }
 
